--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,10 @@
       <div class="project-line"></div>
       <div class="projects-container">
         <div class="project-item">
+          <a href="tictactoe.html" class="project-name" target="_blank">Tic Tac Toe</a>
+          <a href="tictactoe.html" target="_blanks"><img src="img/tictactoe-thumbnail.png" class="thumbnail"></a>
+        </div>
+        <div class="project-item">
           <a href="calculator.html" class="project-name" target="_blank">JavaScript Calculator</a>
           <a href="calculator.html" target="_blanks"><img src="img/calculator-thumbnail.png" class="thumbnail"></a>
         </div>
