Add Pomodoro Clock project.
Changed border-radius in projects page.
Changed Tic Tac Toe head title.

--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,10 @@
       <div class="project-line"></div>
       <div class="projects-container">
         <div class="project-item">
+          <a href="pomodoro.html" class="project-name" target="_blank">Pomodoro Clock</a>
+          <a href="pomodoro.html" target="_blanks"><img src="img/pomodoro-thumbnail.png" class="thumbnail"></a>
+        </div>
+        <div class="project-item">
           <a href="tictactoe.html" class="project-name" target="_blank">Tic Tac Toe</a>
           <a href="tictactoe.html" target="_blanks"><img src="img/tictactoe-thumbnail.png" class="thumbnail"></a>
         </div>
