--- a/tictactoe.html
+++ b/tictactoe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bryan J Sanchez</title>
+    <title>Tic Tac Toe</title>
     <meta charset="UTF-8">
     <meta name="author" content="Bryan J Sanchez">
     <meta name="viewport" content="width=device-width,initial-scale=1">
