Add twitch.TV page.

--- a/projects.html
+++ b/projects.html
@@ -48,6 +48,10 @@
           <a href="quotegenerator.html" class="project-name" target="_blank">Random Quote Generator</a>
           <a href="quotegenerator.html" target="_blanks"><img src="img/quote-thumbnail.png" class="thumbnail"></a>
         </div>
+        <div class="project-item">
+          <a href="twitch.html" class="project-name" target="_blank">twitch.TV</a>
+          <a href="twitch.html" target="_blanks"><img src="img/twitch-thumbnail.png" class="thumbnail"></a>
+        </div>
       </div>
     </div>
     <footer>
