--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   </head>
   <body class="animsition">
     <header>
-      <h1 class="logo">Bryan &bull;J&bull; Sanchez</h1>
+      <h1 class="logo"><a href="index.html" class="selected animsition-link">Bryan &bull;J&bull; Sanchez</a></h1>
       <ul class="nav">
         <li><a href="index.html" class="animsition-link">Home</a></li>
         <li><a href="projects.html" class="animsition-link">Projects</a></li>
@@ -23,7 +23,7 @@
     <div class="container">
       <h2 class="contact-head">Contact</h2>
       <img class="write" src="img/write.jpeg" alt="write">
-      <p>Feel free to send me a message. Just click on the icons below. <br><br>Thanks for visiting!</p>
+      <p class="contact-text">Feel free to send me a message. Just click on the icons below. <br><br>Thanks for visiting!</p>
       <div class="social-icons">
         <a href="https://github.com/bryanjsanchez"><img class="social" src="img/github.svg" alt="GitHub"></a>
         <a href="https://twitter.com/bryanjsanch"><img class="social" src="img/twitter.svg" alt="Twitter"></a>
