--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body class="animsition">
     <header>
-      <h1 class="logo">Bryan &bull;J&bull; Sanchez</h1>
+      <h1 class="logo"><a href="index.html" class="selected animsition-link">Bryan &bull;J&bull; Sanchez</a></h1>
       <ul class="nav">
         <li><a href="index.html" class="selected animsition-link">Home</a></li>
         <li><a href="projects.html" class="animsition-link">Projects</a></li>
@@ -23,7 +23,6 @@
     <div class="animsition container">
       <img class="portrait-big" src="img/portrait-big.png" alt="Bryan">
       <div class="home-text">
-        <h2>Hello World!</h2> 
         <img class="portrait-small" src="img/portrait-small.png" alt="Bryan">
         <p>I created this website as my first project and to showcase future projects. I am a Software Engineering student at the University of Puerto Rico. <br><br><a class="hotlink animsition-link" href="contact.html">Contact me</a> and share something!</p>
       </div>
