--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
   </head>
   <body class="animsition">
     <header>
-      <h1 class="logo">Bryan &bull;J&bull; Sanchez</h1>
+      <h1 class="logo"><a href="index.html" class="selected animsition-link">Bryan &bull;J&bull; Sanchez</a></h1>
       <ul class="nav">
         <li><a href="index.html" class="animsition-link">Home</a></li>
         <li><a href="projects.html" class="selected animsition-link">Projects</a></li>
@@ -24,6 +24,10 @@
       <h2 class="projects-head">Projects</h2>
       <div class="project-line"></div>
       <div class="projects-container">
+        <div class="project-item">
+          <a href="simon.html" class="project-name" target="_blank">Simon!</a>
+          <a href="simon.html" target="_blanks"><img src="img/simon-thumbnail.png" class="thumbnail"></a>
+        </div>
         <div class="project-item">
           <a href="pomodoro.html" class="project-name" target="_blank">Pomodoro Clock</a>
           <a href="pomodoro.html" target="_blanks"><img src="img/pomodoro-thumbnail.png" class="thumbnail"></a>
