--- a/blog.html
+++ b/blog.html
@@ -16,23 +16,18 @@
       <h1 class="logo"><a href="index.html" class="selected animsition-link">Bryan &bull;J&bull; Sanchez</a></h1>
       <ul class="nav">
         <li><a href="index.html" class="animsition-link">Home</a></li>
-        <li><a href="projects.html" class="animsition-link">Projects</a></li>
+        <li><a href="projects.html" class="selected animsition-link">Projects</a></li>
         <li><a href="blog.html" class="animsition-link">Blog</a></li>
-        <li><a href="contact.html" class="selected animsition-link">Contact</a></li>
+        <li><a href="contact.html" class="animsition-link">Contact</a></li>
       </ul>
     </header>
     <div class="container">
-      <h2 class="contact-head">Contact</h2>
-      <img class="write" src="img/write.jpeg" alt="write">
-      <p class="contact-text">Feel free to send me a message. Just click on the icons below. <br><br>Thanks for visiting!</p>
-      <div class="social-icons">
-        <a href="https://github.com/bryanjsanchez"><img class="social" src="img/github.svg" alt="GitHub"></a>
-        <a href="https://twitter.com/bryanjsanch"><img class="social" src="img/twitter.svg" alt="Twitter"></a>
-        <a href="mailto:bryanjsanchez@gmail.com"><img class="social" src="img/mail.svg" alt="Mail"></a>
-        <a href="https://www.linkedin.com/in/bryanjsanchez"><img class="social" src="img/linkedin.svg" alt="LinkedIn"></a>
-        <a href="https://www.instagram.com/bryanjsanch/"><img class="social" src="img/instagram.svg" alt="Instagram"></a>
-        <a href="http://codepen.io/bryanjsanchez/"><img class="social" src="img/codepen.svg" alt="CodePen"></a>
-      </div>
+      <h2 class="blog-head">Blog</h2>
+      <p class="blog-description">This is a blog for the course INSO4101 "Introduction to Software Engineering" taught by <a class="hotlink" href="http://math.uprm.edu/people/peoplefind.php?person=Schutz-Schmuck,%20Marko" target="_blank">Professor Marko Schutz</a> at the University of Puerto Rico.</p>
+      <ul class="blog-posts">
+        <li><a href="">Posts to come!</a></li>
+
+      </ol>
     </div>
     <footer>
       <span>&copy;2016-2017 Bryan J Sanchez</span>
@@ -44,3 +39,4 @@
     </script>
   </body>
 </html>
+
