--- a/projects.html
+++ b/projects.html
@@ -17,12 +17,13 @@
       <ul class="nav">
         <li><a href="index.html" class="animsition-link">Home</a></li>
         <li><a href="projects.html" class="selected animsition-link">Projects</a></li>
+        <li><a href="blog.html" class="animsition-link">Blog</a></li>
         <li><a href="contact.html" class="animsition-link">Contact</a></li>
       </ul>
     </header>
     <div class="container">
       <h2 class="projects-head">Projects</h2>
-      <div class="project-line"></div>
+      <div class="line"></div>
       <div class="projects-container">
         <div class="project-item">
           <a href="simon.html" class="project-name" target="_blank">Simon!</a>
@@ -56,6 +57,7 @@
           <a href="twitch.html" class="project-name" target="_blank">twitch.TV</a>
           <a href="twitch.html" target="_blanks"><img src="img/twitch-thumbnail.png" class="thumbnail"></a>
         </div>
+        <div class="project-bottom-padding"></div>
       </div>
     </div>
     <footer>
