--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <ul class="nav">
         <li><a href="index.html" class="selected animsition-link">Home</a></li>
         <li><a href="projects.html" class="animsition-link">Projects</a></li>
+        <li><a href="blog.html" class="animsition-link">Blog</a></li>
         <li><a href="contact.html" class="animsition-link">Contact</a></li>
       </ul>
     </header>
