--- a/contact.html
+++ b/contact.html
@@ -1,46 +1,55 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Bryan J Sanchez</title>
-    <meta charset="UTF-8">
-    <meta name="author" content="Bryan J Sanchez">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="shortcut icon" href="img/favicon.ico" /> 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,700|Philosopher:400,700|Racing+Sans+One" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="js/animsition/animsition.min.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-  </head>
-  <body class="animsition">
-    <header>
-      <h1 class="logo"><a href="index.html" class="selected animsition-link">Bryan &bull;J&bull; Sanchez</a></h1>
-      <ul class="nav">
-        <li><a href="index.html" class="animsition-link">Home</a></li>
-        <li><a href="projects.html" class="animsition-link">Projects</a></li>
-        <li><a href="blog.html" class="animsition-link">Blog</a></li>
-        <li><a href="contact.html" class="selected animsition-link">Contact</a></li>
-      </ul>
-    </header>
-    <div class="container">
-      <h2 class="contact-head">Contact</h2>
-      <img class="write" src="img/write.jpeg" alt="write">
-      <p class="contact-text">Feel free to send me a message. Just click on the icons below. <br><br>Thanks for visiting!</p>
-      <div class="social-icons">
-        <a href="https://github.com/bryanjsanchez"><img class="social" src="img/github.svg" alt="GitHub"></a>
-        <a href="https://twitter.com/bryanjsanch"><img class="social" src="img/twitter.svg" alt="Twitter"></a>
-        <a href="mailto:bryanjsanchez@gmail.com"><img class="social" src="img/mail.svg" alt="Mail"></a>
-        <a href="https://www.linkedin.com/in/bryanjsanchez"><img class="social" src="img/linkedin.svg" alt="LinkedIn"></a>
-        <a href="https://www.instagram.com/bryanjsanch/"><img class="social" src="img/instagram.svg" alt="Instagram"></a>
-        <a href="http://codepen.io/bryanjsanchez/"><img class="social" src="img/codepen.svg" alt="CodePen"></a>
-      </div>
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114414480-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-114414480-1');
+  </script>
+  <title>Bryan J Sanchez</title>
+  <meta charset="UTF-8">
+  <meta name="author" content="Bryan J Sanchez">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="shortcut icon" href="img/favicon.ico" /> 
+  <link rel="stylesheet" href="css/normalize.css">
+  <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,700|Philosopher:400,700|Racing+Sans+One" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="js/animsition/animsition.min.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+</head>
+<body class="animsition">
+  <header>
+    <h1 class="logo"><a href="index.html" class="selected animsition-link">Bryan &bull;J&bull; Sanchez</a></h1>
+    <ul class="nav">
+      <li><a href="index.html" class="animsition-link">Home</a></li>
+      <li><a href="projects.html" class="animsition-link">Projects</a></li>
+      <li><a href="blog.html" class="animsition-link">Blog</a></li>
+      <li><a href="contact.html" class="selected animsition-link">Contact</a></li>
+    </ul>
+  </header>
+  <div class="container">
+    <h2 class="contact-head">Contact</h2>
+    <img class="write" src="img/write.jpeg" alt="write">
+    <p class="contact-text">Feel free to send me a message. Just click on the icons below. <br><br>Thanks for visiting!</p>
+    <div class="social-icons">
+      <a href="https://github.com/bryanjsanchez" target="_blank"><img class="social" src="img/github.svg" alt="GitHub"></a>
+      <a href="https://twitter.com/bryanjsanch" target="_blank"><img class="social" src="img/twitter.svg" alt="Twitter"></a>
+      <a href="mailto:bryanjsanchez@gmail.com"><img class="social" src="img/mail.svg" alt="Mail"></a>
+      <a href="https://www.linkedin.com/in/bryanjsanchez" target="_blank"><img class="social" src="img/linkedin.svg" alt="LinkedIn"></a>
+      <a href="https://www.instagram.com/bryanjsanch/" target="_blank"><img class="social" src="img/instagram.svg" alt="Instagram"></a>
+      <a href="http://codepen.io/bryanjsanchez/" target="_blank"><img class="social" src="img/codepen.svg" alt="CodePen"></a>
     </div>
-    <footer>
-      <span>&copy;2016-2017 Bryan J Sanchez</span>
-    </footer>
-    <script src="js/jquery-3.1.0.min.js"></script>
-    <script src="js/animsition/animsition.min.js"></script>
-    <script>
-      $(".animsition").animsition();
-    </script>
-  </body>
+  </div>
+  <footer>
+    <span>&copy;2018 Bryan J Sanchez</span>
+  </footer>
+  <script src="js/jquery-3.1.0.min.js"></script>
+  <script src="js/animsition/animsition.min.js"></script>
+  <script>
+    $(".animsition").animsition();
+  </script>
+</body>
 </html>
