--- a/index.html
+++ b/index.html
@@ -1,40 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Bryan J Sanchez</title>
-    <meta charset="UTF-8">
-    <meta name="author" content="Bryan J Sanchez">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="shortcut icon" href="img/favicon.ico" /> 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,700|Philosopher:400,700|Racing+Sans+One" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="js/animsition/animsition.min.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-  </head>
-  <body class="animsition">
-    <header>
-      <h1 class="logo"><a href="index.html" class="selected animsition-link">Bryan &bull;J&bull; Sanchez</a></h1>
-      <ul class="nav">
-        <li><a href="index.html" class="selected animsition-link">Home</a></li>
-        <li><a href="projects.html" class="animsition-link">Projects</a></li>
-        <li><a href="blog.html" class="animsition-link">Blog</a></li>
-        <li><a href="contact.html" class="animsition-link">Contact</a></li>
-      </ul>
-    </header>
-    <div class="animsition container">
-      <img class="portrait-big" src="img/portrait-big.png" alt="Bryan">
-      <div class="home-text">
-        <img class="portrait-small" src="img/portrait-small.png" alt="Bryan">
-        <p>I created this website as my first project and to showcase future projects. I am a Software Engineering student at the University of Puerto Rico. <br><br><a class="hotlink animsition-link" href="contact.html">Contact me</a> and share something!</p>
-      </div>
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114414480-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-114414480-1');
+  </script>
+  <title>Bryan J Sanchez</title>
+  <meta charset="UTF-8">
+  <meta name="author" content="Bryan J Sanchez">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="shortcut icon" href="img/favicon.ico" /> 
+  <link rel="stylesheet" href="css/normalize.css">
+  <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,700|Philosopher:400,700|Racing+Sans+One" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="js/animsition/animsition.min.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+</head>
+<body class="animsition">
+  <header>
+    <h1 class="logo"><a href="index.html" class="selected animsition-link">Bryan &bull;J&bull; Sanchez</a></h1>
+    <ul class="nav">
+      <li><a href="index.html" class="selected animsition-link">Home</a></li>
+      <li><a href="projects.html" class="animsition-link">Projects</a></li>
+      <li><a href="blog.html" class="animsition-link">Blog</a></li>
+      <li><a href="contact.html" class="animsition-link">Contact</a></li>
+    </ul>
+  </header>
+  <div class="animsition container">
+    <img class="portrait-big" src="img/portrait-big.png" alt="Bryan">
+    <div class="home-text">
+      <img class="portrait-small" src="img/portrait-small.png" alt="Bryan">
+      <p>I created this website as my first project and to showcase future projects. I am a Computer Science and Engineering student at the University of Puerto Rico. <br><br><a class="hotlink animsition-link" href="contact.html">Contact me</a> and share something!</p>
     </div>
-    <footer>
-      <span>&copy;2016-2017 Bryan J Sanchez</span>
-    </footer>
-    <script src="js/jquery-3.1.0.min.js"></script>
-    <script src="js/animsition/animsition.min.js"></script>
-    <script>
-      $(".animsition").animsition();
-    </script>
-  </body>
+  </div>
+  <footer>
+    <span>&copy;2018 Bryan J Sanchez</span>
+  </footer>
+  <script src="js/jquery-3.1.0.min.js"></script>
+  <script src="js/animsition/animsition.min.js"></script>
+  <script>
+    $(".animsition").animsition();
+  </script>
+</body>
 </html>
