--- a/projects.html
+++ b/projects.html
@@ -1,73 +1,82 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Bryan J Sanchez</title>
-    <meta charset="UTF-8">
-    <meta name="author" content="Bryan J Sanchez">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="shortcut icon" href="img/favicon.ico" /> 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,700|Philosopher:400,700|Racing+Sans+One" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="js/animsition/animsition.min.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-  </head>
-  <body class="animsition">
-    <header>
-      <h1 class="logo"><a href="index.html" class="selected animsition-link">Bryan &bull;J&bull; Sanchez</a></h1>
-      <ul class="nav">
-        <li><a href="index.html" class="animsition-link">Home</a></li>
-        <li><a href="projects.html" class="selected animsition-link">Projects</a></li>
-        <li><a href="blog.html" class="animsition-link">Blog</a></li>
-        <li><a href="contact.html" class="animsition-link">Contact</a></li>
-      </ul>
-    </header>
-    <div class="container">
-      <h2 class="projects-head">Projects</h2>
-      <div class="line"></div>
-      <div class="projects-container">
-        <div class="project-item">
-          <a href="simon.html" class="project-name" target="_blank">Simon!</a>
-          <a href="simon.html" target="_blanks"><img src="img/simon-thumbnail.png" class="thumbnail"></a>
-        </div>
-        <div class="project-item">
-          <a href="pomodoro.html" class="project-name" target="_blank">Pomodoro Clock</a>
-          <a href="pomodoro.html" target="_blanks"><img src="img/pomodoro-thumbnail.png" class="thumbnail"></a>
-        </div>
-        <div class="project-item">
-          <a href="tictactoe.html" class="project-name" target="_blank">Tic Tac Toe</a>
-          <a href="tictactoe.html" target="_blanks"><img src="img/tictactoe-thumbnail.png" class="thumbnail"></a>
-        </div>
-        <div class="project-item">
-          <a href="calculator.html" class="project-name" target="_blank">JavaScript Calculator</a>
-          <a href="calculator.html" target="_blanks"><img src="img/calculator-thumbnail.png" class="thumbnail"></a>
-        </div>
-        <div class="project-item">
-          <a href="wikiview.html" class="project-name" target="_blank">Wikipedia Viewer</a>
-          <a href="wikiview.html" target="_blanks"><img src="img/wikiview-thumbnail.png" class="thumbnail"></a>
-        </div>
-        <div class="project-item">
-          <a href="weather.html" class="project-name" target="_blank">How's the Weather?</a>
-          <a href="weather.html" target="_blanks"><img src="img/weather-thumbnail.png" class="thumbnail"></a>
-        </div>
-        <div class="project-item">
-          <a href="quotegenerator.html" class="project-name" target="_blank">Random Quote Generator</a>
-          <a href="quotegenerator.html" target="_blanks"><img src="img/quote-thumbnail.png" class="thumbnail"></a>
-        </div>
-        <div class="project-item">
-          <a href="twitch.html" class="project-name" target="_blank">twitch.TV</a>
-          <a href="twitch.html" target="_blanks"><img src="img/twitch-thumbnail.png" class="thumbnail"></a>
-        </div>
-        <div class="project-bottom-padding"></div>
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114414480-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-114414480-1');
+  </script>
+  <title>Bryan J Sanchez</title>
+  <meta charset="UTF-8">
+  <meta name="author" content="Bryan J Sanchez">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="shortcut icon" href="img/favicon.ico" /> 
+  <link rel="stylesheet" href="css/normalize.css">
+  <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,700|Philosopher:400,700|Racing+Sans+One" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="js/animsition/animsition.min.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+</head>
+<body class="animsition">
+  <header>
+    <h1 class="logo"><a href="index.html" class="selected animsition-link">Bryan &bull;J&bull; Sanchez</a></h1>
+    <ul class="nav">
+      <li><a href="index.html" class="animsition-link">Home</a></li>
+      <li><a href="projects.html" class="selected animsition-link">Projects</a></li>
+      <li><a href="blog.html" class="animsition-link">Blog</a></li>
+      <li><a href="contact.html" class="animsition-link">Contact</a></li>
+    </ul>
+  </header>
+  <div class="container">
+    <h2 class="projects-head">Projects</h2>
+    <div class="line"></div>
+    <div class="projects-container">
+      <div class="project-item">
+        <a href="simon.html" class="project-name" target="_blank">Simon!</a>
+        <a href="simon.html" target="_blanks"><img src="img/simon-thumbnail.png" class="thumbnail"></a>
       </div>
+      <div class="project-item">
+        <a href="pomodoro.html" class="project-name" target="_blank">Pomodoro Clock</a>
+        <a href="pomodoro.html" target="_blanks"><img src="img/pomodoro-thumbnail.png" class="thumbnail"></a>
+      </div>
+      <div class="project-item">
+        <a href="tictactoe.html" class="project-name" target="_blank">Tic Tac Toe</a>
+        <a href="tictactoe.html" target="_blanks"><img src="img/tictactoe-thumbnail.png" class="thumbnail"></a>
+      </div>
+      <div class="project-item">
+        <a href="calculator.html" class="project-name" target="_blank">JavaScript Calculator</a>
+        <a href="calculator.html" target="_blanks"><img src="img/calculator-thumbnail.png" class="thumbnail"></a>
+      </div>
+      <div class="project-item">
+        <a href="wikiview.html" class="project-name" target="_blank">Wikipedia Viewer</a>
+        <a href="wikiview.html" target="_blanks"><img src="img/wikiview-thumbnail.png" class="thumbnail"></a>
+      </div>
+      <div class="project-item">
+        <a href="weather.html" class="project-name" target="_blank">How's the Weather?</a>
+        <a href="weather.html" target="_blanks"><img src="img/weather-thumbnail.png" class="thumbnail"></a>
+      </div>
+      <div class="project-item">
+        <a href="quotegenerator.html" class="project-name" target="_blank">Random Quote Generator</a>
+        <a href="quotegenerator.html" target="_blanks"><img src="img/quote-thumbnail.png" class="thumbnail"></a>
+      </div>
+      <div class="project-item">
+        <a href="twitch.html" class="project-name" target="_blank">twitch.TV</a>
+        <a href="twitch.html" target="_blanks"><img src="img/twitch-thumbnail.png" class="thumbnail"></a>
+      </div>
+      <div class="project-bottom-padding"></div>
     </div>
-    <footer>
-      <span>&copy;2016-2017 Bryan J Sanchez</span>
-    </footer>
-    <script src="js/jquery-3.1.0.min.js"></script>
-    <script src="js/animsition/animsition.min.js"></script>
-    <script>
-      $(".animsition").animsition();
-    </script>
-  </body>
+  </div>
+  <footer>
+    <span>&copy;2018 Bryan J Sanchez</span>
+  </footer>
+  <script src="js/jquery-3.1.0.min.js"></script>
+  <script src="js/animsition/animsition.min.js"></script>
+  <script>
+    $(".animsition").animsition();
+  </script>
+</body>
 </html>
 
