--- a/quotegenerator.html
+++ b/quotegenerator.html
@@ -1,31 +1,40 @@
-<doctype! html>
+<!DOCTYPE html>
 <html>
- <head>
-    <title>Random Quote Generator</title>
-    <meta charset="UTF-8">
-    <meta name="author" content="Bryan J Sanchez">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="shortcut icon" href="img/quote-favicon.ico" /> 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Sansita|Source+Code+Pro|Inconsolata" rel="stylesheet">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" type="text/css" href="css/quotegenerator.css">
-  </head>
-  <body>
-    <div class="quotebox text-center">
-      <div id="quote">Click "Next Quote"</div>
-      <div id="author"></div>
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114414480-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-114414480-1');
+  </script>
+  <title>Random Quote Generator</title>
+  <meta charset="UTF-8">
+  <meta name="author" content="Bryan J Sanchez">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="shortcut icon" href="img/quote-favicon.ico" /> 
+  <link rel="stylesheet" href="css/normalize.css">
+  <link href="https://fonts.googleapis.com/css?family=Sansita|Source+Code+Pro|Inconsolata" rel="stylesheet">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
+  <link rel="stylesheet" type="text/css" href="css/quotegenerator.css">
+</head>
+<body>
+  <div class="quotebox text-center">
+    <div id="quote">Click "Next Quote"</div>
+    <div id="author"></div>
+  </div>
+  <div class ="buttons">
+    <a id="twitter" target="_blank"><button type="button"><i class="fa fa-twitter"></i> Tweet Quote</button></a>
+    <button type="button" id="next"><i class="fa fa-quote-left"></i> Next Quote</button>
+  </div>
+  <footer>
+    <div class="footer row">
+      <p class="text-center">Created by <a href="http://www.bryanjsanchez.com" target="_blank">Bryan J Sanchez</a> for <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp</a>.</p>
     </div>
-    <div class ="buttons">
-      <a id="twitter" target="_blank"><button type="button"><i class="fa fa-twitter"></i> Tweet Quote</button></a>
-      <button type="button" id="next"><i class="fa fa-quote-left"></i> Next Quote</button>
-    </div>
-    <footer>
-      <div class="footer row">
-        <p class="text-center">Created by <a href="http://www.bryanjsanchez.com" target="_blank">Bryan J Sanchez</a> for <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp</a>.</p>
-      </div>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <script src="js/quotegenerator.js"></script>
-  </body>
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+  <script src="js/quotegenerator.js"></script>
+</body>
 </html>
