--- a/twitch.html
+++ b/twitch.html
@@ -1,24 +1,33 @@
-<doctype! html>
+<!DOCTYPE html>
 <html>
- <head>
-    <title>twitch.tv</title>
-    <meta charset="UTF-8">
-    <meta name="author" content="Bryan J Sanchez">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Abel|Jura|Noto+Serif" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/twitch.css">
-  </head>
-  <body>
-    <h1>twitch.TV</h1>
-    <ul id="channels">
-    </ul>
-    <footer>
-      <div class="footer row">
-        <p>Created by <a href="http://www.bryanjsanchez.com" target="_blank">Bryan J Sanchez</a> for <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp</a>.</p>
-      </div>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <script src="js/twitch.js"></script>
-  </body>
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114414480-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-114414480-1');
+  </script>
+  <title>twitch.tv</title>
+  <meta charset="UTF-8">
+  <meta name="author" content="Bryan J Sanchez">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link href="https://fonts.googleapis.com/css?family=Abel|Jura|Noto+Serif" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/twitch.css">
+</head>
+<body>
+  <h1>twitch.TV</h1>
+  <ul id="channels">
+  </ul>
+  <footer>
+    <div class="footer row">
+      <p>Created by <a href="http://www.bryanjsanchez.com" target="_blank">Bryan J Sanchez</a> for <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp</a>.</p>
+    </div>
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+  <script src="js/twitch.js"></script>
+</body>
 </html>
